# advanced-seo-mcp

./: .env.example  .gitignore  README.md  gemini-extension.json  index.js  package.json  pyproject.toml  setup_extension.py
marketing/: BLOG_POST.md  LINKEDIN_POST.md  LINKEDIN_PROJECT_DETAILS.md  TWITTER_THREAD.md
marketing/en/: BLOG_POST.md  LINKEDIN_POST.md  TWITTER_THREAD.md
reports/: seo_report_2run_be_2026-01-07_16-49-50.md  seo_report_mamapapa_be_2026-01-07_16-51-27.md  seo_report_mamapapa_be_2026-01-07_17-03-41.md
src/advanced_seo_mcp/: server.py
src/advanced_seo_mcp/providers/: ahrefs_scraper.py  competitor_analyzer.py  content_analyzer.py  link_inspector.py  onpage_analyzer.py  psi_analyzer.py  reporter.py  schema_validator.py  sitemap_auditor.py  technical_auditor.py
src/advanced_seo_mcp/utils/: cache.py  capsolver.py
